# janus-app

./: Cargo.toml  README.md
docker/: Dockerfile  janus.plugin.example.toml
example/: Cargo.toml
example/client/: index.html  main.js
example/src/: config.rs  event.rs  handle.rs  lib.rs
src/: error.rs  ffi.rs  handle_registry.rs  lib.rs  plugin.rs
src/plugin/: handle_registry.rs
